--- a/drivers/xiaomi/Kconfig
+++ b/drivers/xiaomi/Kconfig
@@ -2,11 +2,30 @@ menu "Xiaomi MIUI additions"
 
 config XIAOMI_MIUI
 	bool "Enable Xiaomi MIUI modifications"
-	depends on BOARD_XIAOMI
 	help
 	  Enables compilation of Xiaomi MIUI specific vendor additions
 
 	  Say Y if you want to compile the Xiaomi MIUI specific kernel modifications.
 	  Say N if you want to discard the Xiaomi MIUI specific kernel modifications.
+
+if XIAOMI_MIUI
+
+config MILLET
+	bool "MIUI frozen framework"
+	help
+	  MIUI frozen function
+
+config PERF_CRITICAL_RT_TASK
+	bool "Enable set rt binder thread" if EXPERT
+	help
+	  This option speeds ui feature by setting BlastBufferQueue binder
+	  thread to FIFO.
+
+config SF_BINDER
+	bool "Enable surfaceflinger binder thread" if EXPERT
+	help
+	  Xiaomi restore surfaceflinger binder priority FIFO
+
+endif
 
 endmenu
